# sales_pipeline_TP

./: README.md  main.py  pyproject.toml  run_test.ipynb.ipynb
.github/workflows/: ci.yml
sales_pipeline/bronze/: ingestion.py
sales_pipeline/config/: config.yaml
sales_pipeline/gold/: aggregation.py
sales_pipeline/silver/: cleaning.py
sales_pipeline/utils/: Reset_Raw_Data.ipynb  utils.py
tests/: run_test.ipynb  test_cleaning.py
