[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "spark-project-databricks"
version = "1.0.1"
description = "Sales pipeline processing for Databricks"

readme = "README.md"
license = { text = "LICENCE AUBAY" }
requires-python = ">=3.10"
authors = [
  { name="Baptiste", email="bbellamy@aubay.com" }
]
dynamic = ["dependencies"]

[project.scripts]
run-pipeline = "main:run_pipeline"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["sales_pipeline"]